--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,7 +8,7 @@
 html,
 body {
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
 }
 
 body {
@@ -16,8 +16,7 @@ body {
     padding: 5%;
     max-width: 1000px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    gap: 10px;
     flex-direction: column;
 }
 
