--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -49,6 +49,7 @@ form {
 
 input {
     width: 100%;
+    padding: 5px;
 
     &::placeholder {
         color: #cacaca;
@@ -57,12 +58,28 @@ input {
 }
 
 button {
-    padding: 0 5% !important;
+    padding: 5px 15px !important;
+    color: #fff;
+    font-weight: bold;
+    background-color: rgba(#4F5B93, 1);
+    transition: background-color 200ms, color 200ms;
+    cursor: pointer;
+
+    &:hover {
+        background-color: rgba(#4F5B93, 0.9);
+    }
+
+    &:active {
+        color: #4F5B93;
+        background-color: rgba(#4F5B93, 0.1);
+    }
 }
 
 input,
 button,
 select {
+    border: #4F5B93 thin solid;
+    border-radius: 5px;
     min-height: 20px;
     font-size: large;
 }
@@ -72,6 +89,13 @@ select {
     justify-content: center;
     align-items: center;
     gap: 10px;
+}
+
+.input__error {
+    color: red;
+    font-style: italic;
+    height: 1em;
+    width: 100%;
 }
 
 #qrcode__container {
